tests/baselines/reference/instantiateGenericClassWithWrongNumberOfTypeArguments.errors.txt
instantiateGenericClassWithWrongNumberOfTypeArguments.ts(5,5): error TS2564: Property 'x' has no initializer and is not definitely assigned in the constructor.
instantiateGenericClassWithWrongNumberOfTypeArguments.ts(8,15): error TS2558: Expected 1 type arguments, but got 2.
instantiateGenericClassWithWrongNumberOfTypeArguments.ts(11,5): error TS2564: Property 'x' has no initializer and is not definitely assigned in the constructor.
instantiateGenericClassWithWrongNumberOfTypeArguments.ts(12,5): error TS2564: Property 'y' has no initializer and is not definitely assigned in the constructor.
instantiateGenericClassWithWrongNumberOfTypeArguments.ts(16,15): error TS2558: Expected 2 type arguments, but got 1.


==== instantiateGenericClassWithWrongNumberOfTypeArguments.ts (5 errors) ====
    // it is always an error to provide a type argument list whose count does not match the type parameter list
    // both of these attempts to construct a type is an error
    
    class C<T> {
        x: T;
        ~
!!! error TS2564: Property 'x' has no initializer and is not definitely assigned in the constructor.
    }
    
    var c = new C<number, number>();
                  ~~~~~~~~~~~~~~
!!! error TS2558: Expected 1 type arguments, but got 2.
    
    class D<T, U> {
        x: T
        ~
!!! error TS2564: Property 'x' has no initializer and is not definitely assigned in the constructor.
        y: U
        ~
!!! error TS2564: Property 'y' has no initializer and is not definitely assigned in the constructor.
    }
    
    // BUG 794238
    var d = new D<number>();
                  ~~~~~~
!!! error TS2558: Expected 2 type arguments, but got 1.